project(PointCloudMap)

add_executable(KnnEdgeExtractTest KnnEdgeExtractTest.cpp)
add_executable(KnnEdgeExtractTest2 KnnEdgeExtractTest2.cpp)
target_link_libraries(KnnEdgeExtractTest UtilLib PCMLib)
target_link_libraries(KnnEdgeExtractTest2 UtilLib PCMLib)

add_executable(EARTest EARTest.cpp)
target_link_libraries(EARTest UtilLib PCMLib)

add_executable(ClusterEdgeExtractTest ClusterEdgeExtractTest.cpp)
target_link_libraries(ClusterEdgeExtractTest UtilLib PCMLib)

add_executable(EDLTest EDLTest.cpp)
add_executable(LSRTest LSRTest.cpp)
add_executable(LSHPTest LSHPTest.cpp)
add_executable(LineBackProjectTest LineBackProjectTest.cpp)
add_executable(RotateCloudTest RotateCloudTest.cpp)
add_executable(EdgeFilterTest EdgeFilterTest.cpp)
add_executable(RegionTest RegionTest.cpp)
add_executable(LSDFilterTest LSDFilterTest.cpp)
add_executable(DensityFilter DensityFilter.cpp)
target_link_libraries(EDLTest PCMLib UtilLib)
target_link_libraries(LSRTest PCMLib UtilLib)
target_link_libraries(LSHPTest PCMLib UtilLib)
target_link_libraries(RotateCloudTest PCMLib UtilLib)
target_link_libraries(LineBackProjectTest PCMLib UtilLib)
target_link_libraries(EdgeFilterTest PCMLib UtilLib)
target_link_libraries(RegionTest PCMLib UtilLib)
target_link_libraries(LSDFilterTest PCMLib UtilLib)
target_link_libraries(DensityFilter PCMLib UtilLib)
